feat: fixed territory and added prefixes to them

--- a/configs/main-config.json
+++ b/configs/main-config.json
@@ -5,8 +5,8 @@
         "ip":"localhost",
         "port":28015,
         "database":"wynntilsaccounts",
-        "username":"",
-        "password":""
+        "username":"test",
+        "password":"test"
     },
     "ratelimit": {
         "global": 15000,
